--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.1",
+    "ffmpeg-static": "^5.1.0",
     "method-override": "^3.0.0",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.3",
@@ -26,6 +27,8 @@
     "nodemon": "^2.0.7",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "simple-thumbnail": "^1.6.5",
+    "thumbsupply": "^0.4.0",
     "validator": "^13.6.0"
   }
 }
