--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  
   "author": "",
   "license": "MIT",
   "dependencies": {
@@ -27,5 +28,8 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "validator": "^13.6.0"
+  },
+  "engines": {
+    "node": ">=14 <15"
   }
 }
