--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "browser-detect": "^0.2.28",
     "cloudinary": "^1.25.1",
     "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
