--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/express-flash": "^0.0.2",
     "@types/express-session": "^1.17.7",
@@ -44,6 +45,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^20.4.1",
     "@types/passport": "^1.0.12",
+    "@types/passport-local": "^1.0.35",
     "@types/validator": "^13.7.17",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
